2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	Fix accidental integer division intended to be float division when
	setting the timestamp on events. This was causing all timestamps
	to be rounded to the nearest second.
	
2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLContext.m:
	* Source/x11/XGGLContext.m:
	Apply fix for bug 29705: OpenGL subwindow positioning error
	(OpenGL subwindow position was incorrectly calculated when
	the window content view was flipped)

2010-07-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m:
	Treat Shift modifiers in the same manner as other modifiers.
	This fixes the value of the shift bit (NSShiftKeyMask) in
	the modifierFlags passed to a -flagsChanged: method call.
	Without it the shift bit is inverted, as explained in
	the source comments, as X reports the modifier bits in
	force before the key was pressed/released.
	Patch by Derek Fawcus <dfawcus@employees.org>.

2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	When ordering out a window, use the SWP_NOACTIVATE flag on SetWindowPos
	so Windows doesn't activate/deactivate any windows when hiding a window.

	This fixes the bug where when a tooltip disappeared, it would deactivate
	the window the tooltip was over.

2010-07-07  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	* Source/win32/w32_movesize.m:
	Fix for bug #29709: Windows: Maximize button in a window title bar is
	always grayed out

2010-07-06  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Tweak the conditions for incrementing the
	clickCount when handling mouse clicks: (i.e. double click detection)
	- Require a click to be within a distance (retrieved from Windows)
	   of the last click to count (previously there was no proximity check)
	- Allow clicks separated by the Windows double click time interval